test/Dialect/ZKIR/types_fail.zkir
// RUN: zkir-opt -split-input-file -verify-diagnostics %s

zkir.func private @a()
// expected-error@+1 {{failed to parse ZKIR_ArrayType parameter 'numElements' which is to be a `uint64_t`}}
zkir.func private @b(%x: !zkir.array<@a x !zkir.felt>) // expected-error {{expected integer value}}
// -----

// expected-error@+1 {{failed to parse ZKIR_ArrayType parameter 'numElements' which is to be a `uint64_t`}}
zkir.func private @c(%x: !zkir.array<index x i256>) // expected-error {{expected integer value}}
// -----
